--- a/about/project-management/prototypes/public-websites.yml
+++ b/about/project-management/prototypes/public-websites.yml
@@ -1,7 +1,7 @@
 - Department of Agriculture
   - www.usda.gov
   - www.farmers.gov
-  - www.fsa.usda.gov/
+  - www.fsa.usda.gov
 - Department of Commerce
   - www.commerce.gov
   - www.bis.doc.gov
